--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(Common)
 add_subdirectory(ch04_init)
 add_subdirectory(ch06_box)
 add_subdirectory(ch06_box_extra)
+add_subdirectory(ch07_shape)
