--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,3 +9,4 @@ add_subdirectory(ch04_init)
 add_subdirectory(ch06_box)
 add_subdirectory(ch06_box_extra)
 add_subdirectory(ch07_shape)
+add_subdirectory(ch07_land_wave)
