--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,3 +10,4 @@ add_subdirectory(ch06_box)
 add_subdirectory(ch06_box_extra)
 add_subdirectory(ch07_shape)
 add_subdirectory(ch07_land_wave)
+add_subdirectory(ch08_lighting)
