--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory(ch07_land_wave)
 add_subdirectory(ch08_lighting)
 add_subdirectory(ch09_texture)
 add_subdirectory(ch10_blending)
+add_subdirectory(ch11_stenciling)
