--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,3 +14,4 @@ add_subdirectory(ch08_lighting)
 add_subdirectory(ch09_texture)
 add_subdirectory(ch10_blending)
 add_subdirectory(ch11_stenciling)
+add_subdirectory(ch12_gs)
