--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,6 @@ add_subdirectory(ch10_blending)
 add_subdirectory(ch11_stenciling)
 add_subdirectory(ch12_gs)
 add_subdirectory(ch13_cs_wave)
-# add_subdirectory(ch13_cs_blur)
+add_subdirectory(ch13_cs_blur)
 # add_subdirectory(ch13_cs_sobel)
 # add_subdirectory(ch13_cs_vecadd)
