--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,5 +17,5 @@ add_subdirectory(ch11_stenciling)
 add_subdirectory(ch12_gs)
 add_subdirectory(ch13_cs_wave)
 add_subdirectory(ch13_cs_blur)
-# add_subdirectory(ch13_cs_sobel)
+add_subdirectory(ch13_cs_sobel)
 # add_subdirectory(ch13_cs_vecadd)
