--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,4 +18,4 @@ add_subdirectory(ch12_gs)
 add_subdirectory(ch13_cs_wave)
 add_subdirectory(ch13_cs_blur)
 add_subdirectory(ch13_cs_sobel)
-# add_subdirectory(ch13_cs_vecadd)
+add_subdirectory(ch14_tessellation_basic)
